# patch-that-shit

./: Cargo.toml
fixtures/: basic-not-so-basic.yaml  basic-patch.json  basic-patch.yaml  basic.yaml  result.yaml
src/: main.rs
