[package]
name = "patch-that-shit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-diff = "0.4.1"
octocrab = "0.15"
json-patch = "*"
treediff = { version = "4.0", features = ["with-serde-yaml"] }